Removed some placeholders

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,18 +109,6 @@
         </li>
         <li class="sidebar-nav-item">
           <a href="#" class="sidebar-nav-link">
-            <i class="bi bi-graph-up"></i>
-            <span class="nav-text">Analytics</span>
-          </a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a href="#" class="sidebar-nav-link">
-            <i class="bi bi-chat-dots"></i>
-            <span class="nav-text">Messages</span>
-          </a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a href="#" class="sidebar-nav-link">
             <i class="bi bi-gear"></i>
             <span class="nav-text">Settings</span>
           </a>
@@ -179,66 +167,28 @@
           </div>
         </div>
 
-        <!-- Charts and Recent Activity -->
+        <!-- Section Placehodlers -->
         <div class="row mb-4">
           <div class="col-lg-8 mb-4">
             <div class="card">
               <div class="card-header">
-                <h5 class="mb-0"><i class="bi bi-graph-up me-2"></i>Patient Vitals Overview</h5>
+                <h5 class="mb-0"><i class="bi bi-graph-up me-2"></i>Vitals Overview</h5>
               </div>
-              <div class="card-body">
-                <div class="chart-container">
-                  <div class="text-center">
-                    <i class="bi bi-graph-up display-1 text-muted"></i>
-                    <p class="mt-3">Vitals chart would be displayed here</p>
-                    <small class="text-muted">Integration with charting library needed</small>
-                  </div>
-                </div>
-              </div>
+              <div class="card-body"></div>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4">
             <div class="card">
               <div class="card-header">
-                <h5 class="mb-0"><i class="bi bi-clock-history me-2"></i>Recent Activity</h5>
+                <h5 class="mb-0"><i class="bi bi-clock-history me-2"></i>Section</h5>
               </div>
-              <div class="card-body">
-                <div class="list-group list-group-flush">
-                  <div class="list-group-item d-flex align-items-center border-0 px-0">
-                    <div class="bg-success rounded-circle p-2 me-3">
-                      <i class="bi bi-check text-white"></i>
-                    </div>
-                    <div>
-                      <h6 class="mb-1">Appointment completed</h6>
-                      <small class="text-muted">John Doe - 2 hours ago</small>
-                    </div>
-                  </div>
-                  <div class="list-group-item d-flex align-items-center border-0 px-0">
-                    <div class="bg-warning rounded-circle p-2 me-3">
-                      <i class="bi bi-exclamation text-white"></i>
-                    </div>
-                    <div>
-                      <h6 class="mb-1">Critical vital alert</h6>
-                      <small class="text-muted">Jane Smith - 3 hours ago</small>
-                    </div>
-                  </div>
-                  <div class="list-group-item d-flex align-items-center border-0 px-0">
-                    <div class="bg-info rounded-circle p-2 me-3">
-                      <i class="bi bi-plus text-white"></i>
-                    </div>
-                    <div>
-                      <h6 class="mb-1">New patient registered</h6>
-                      <small class="text-muted">Mike Johnson - 4 hours ago</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="card-body"></div>
             </div>
           </div>
         </div>
 
-        <!-- Quick Actions and Upcoming Appointments -->
+        <!-- Button Testing -->
         <div class="row">
           <div class="col-lg-6 mb-4">
             <div class="card">
@@ -305,33 +255,9 @@
           <div class="col-lg-6 mb-4">
             <div class="card">
               <div class="card-header">
-                <h5 class="mb-0"><i class="bi bi-calendar3 me-2"></i>Upcoming Appointments</h5>
+                <h5 class="mb-0"><i class="bi bi-calendar3 me-2"></i>Section with Calender</h5>
               </div>
-              <div class="card-body">
-                <div class="list-group list-group-flush">
-                  <div class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
-                    <div>
-                      <h6 class="mb-1">Sarah Wilson</h6>
-                      <small class="text-muted">Routine Checkup</small>
-                    </div>
-                    <span class="badge bg-primary rounded-pill">10:30 AM</span>
-                  </div>
-                  <div class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
-                    <div>
-                      <h6 class="mb-1">Robert Chen</h6>
-                      <small class="text-muted">Follow-up Visit</small>
-                    </div>
-                    <span class="badge bg-success rounded-pill">2:15 PM</span>
-                  </div>
-                  <div class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
-                    <div>
-                      <h6 class="mb-1">Emily Davis</h6>
-                      <small class="text-muted">Lab Results Review</small>
-                    </div>
-                    <span class="badge bg-info rounded-pill">4:00 PM</span>
-                  </div>
-                </div>
-              </div>
+              <div class="card-body"></div>
             </div>
           </div>
         </div>
