Added ids to nav items for dynamic display based on user roles

--- a/frontend/pharmacy.html
+++ b/frontend/pharmacy.html
@@ -52,25 +52,25 @@
     <!-- Sidebar - Start -->
     <nav class="sidebar" id="sidebar">
       <ul class="sidebar-nav">
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="dashboardLink">
           <a href="index.html" class="sidebar-nav-link"> <i class="bi bi-grid-3x3-gap-fill"></i><span class="nav-text">Dashboard</span> </a>
         </li>
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="patientsLink">
           <a href="patients.html" class="sidebar-nav-link"> <i class="bi bi-people-fill"></i><span class="nav-text">Patients</span> </a>
         </li>
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="appointmentsLink">
           <a href="appointments.html" class="sidebar-nav-link"> <i class="bi bi-calendar3"></i><span class="nav-text">Appointments</span> </a>
         </li>
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="treatmentsLink">
           <a href="treatments.html" class="sidebar-nav-link"> <i class="bi bi-heart-pulse"></i><span class="nav-text">Treatments</span> </a>
         </li>
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="medicalRecordsLink">
           <a href="medical-records.html" class="sidebar-nav-link"> <i class="bi bi-clipboard2-pulse"></i><span class="nav-text">Medical Records</span> </a>
         </li>
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="pharmacyLink">
           <a href="pharmacy.html" class="sidebar-nav-link active"> <i class="bi bi-capsule"></i><span class="nav-text">Pharmacy</span> </a>
         </li>
-        <li class="sidebar-nav-item">
+        <li class="sidebar-nav-item" id="settingsLink">
           <a href="settings.html" class="sidebar-nav-link"> <i class="bi bi-gear"></i><span class="nav-text">Settings</span> </a>
         </li>
       </ul>
