--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,8 +94,8 @@
             <div class="card stat-card">
               <div class="card-body text-center">
                 <i class="bi bi-people-fill display-4 mb-3"></i>
-                <div class="stat-number">247</div>
-                <div class="stat-label">Total Patients</div>
+                <div class="stat-number">10</div>
+                <div class="stat-label">Your Patients</div>
               </div>
             </div>
           </div>
@@ -103,17 +103,17 @@
             <div class="card stat-card bg-success">
               <div class="card-body text-center">
                 <i class="bi bi-calendar-check display-4 mb-3"></i>
-                <div class="stat-number">18</div>
+                <div class="stat-number">3</div>
                 <div class="stat-label">Today's Appointments</div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 mb-3">
-            <div class="card stat-card bg-warning">
+            <div class="card stat-card bg-info">
               <div class="card-body text-center">
-                <i class="bi bi-exclamation-triangle display-4 mb-3"></i>
+                <i class="bi bi-heart-pulse display-4 mb-3"></i>
                 <div class="stat-number">5</div>
-                <div class="stat-label">Critical Alerts</div>
+                <div class="stat-label">Your Treatments</div>
               </div>
             </div>
           </div>
@@ -123,6 +123,34 @@
                 <i class="bi bi-capsule display-4 mb-3"></i>
                 <div class="stat-number">32</div>
                 <div class="stat-label">Pending Prescriptions</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card stat-card bg-success">
+              <div class="card-body text-center">
+                <i class="bi bi-calendar-check display-4 mb-3"></i>
+                <div class="stat-number">3</div>
+                <div class="stat-label">Upcoming Appointments</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card stat-card">
+              <div class="card-body text-center">
+                <i class="bi bi-people-fill display-4 mb-3"></i>
+                <div class="stat-number">247</div>
+                <div class="stat-label">Total Patients</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-3">
+            <div class="card stat-card">
+              <div class="card-body text-center">
+                <i class="bi bi-people-fill display-4 mb-3"></i>
+                <div class="stat-number">247</div>
+                <div class="stat-label">Total Patients</div>
               </div>
             </div>
           </div>
