--- a/frontend/patients.html
+++ b/frontend/patients.html
@@ -79,7 +79,35 @@
 
     <!-- Main Content -->
     <main class="main-content" id="mainContent">
-      <div class="container-fluid"></div>
+      <div class="container-fluid">
+        <div class="row mb-4">
+          <div class="col-12">
+            <h3 class="mb-1"><i class="bi bi-people-fill me-2"></i>Patients</h3>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="mb-4">
+            <div class="card">
+              <div class="card-header"><h5 class="mb-0">Your Patients</h5></div>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table table-bordered table-hover align-middle" id="patientsTable">
+                    <thead class="table-light">
+                      <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Date added</th>
+                        <th>Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody></tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Bootstrap JS -->
